# band-contrastive

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
bandcon/: __init__.py
bandcon/cli/: eval.py  train.py
bandcon/data/: canonicalize.py  datasets.py  loaders.py
bandcon/data/processing/: filter.py  physical.py
bandcon/eval/: metrics.py
bandcon/losses/: band_supcon.py  ccl.py  conr.py  general.py
bandcon/models/: mlp_vector.py  utils.py
bandcon/models/generators/: cvae.py  diffusion.py
bandcon/train/: loops.py
bandcon/utils/: hydra_utils.py  io.py  logging.py
configs/: defaults.yaml  vectors.yaml
configs/cont_loss/: band_supcon.yaml  conr.yaml  rnc.yaml
configs/data/: default_data.yaml  filtering.yaml  graphs.yaml  prep.yaml  vectors_dummy.yaml
configs/eval/: hitrate.yaml  molecular_params.yaml  ood.yaml  sampling.yaml
configs/exp/: example.yaml  vector_cvae_band.yaml
configs/generate/: sampling.yaml
configs/loss/: band_supcon.yaml  ccl.yaml  mse_bandsup.yaml  no_contloss.yaml
configs/model/: cvae_vector.yaml  diffusion_vector.yaml
configs/optim/: adam.yaml
configs/train/: base.yaml  curriculum_25_15_10.yaml  train_vector.yaml
docs/: datasets.md  ethics.md  experiments.md  method.md
notebooks/: scrap.ipynb
scripts/: eval.py  export_config.py  generate.py  sweep.py  train.py
tests/: test_data.py  test_eval.py  test_losses.py  test_models.py
